<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My app portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="portfolio_title">My Nanodegree Apps!</string>

    <string name="portfolio_spotify">Spotify Streamer</string>
    <string name="portfolio_scores">Scores App</string>
    <string name="portfolio_library">Library App</string>
    <string name="portfolio_build_it_bigger">Build it bigger</string>
    <string name="portfolio_xyz_reader">xyz reader</string>
    <string name="portfolio_capstone">Capstone: My Own App</string>
    <string name="portfolio_button_message_format">This button will launch %s</string>


</resources>
