<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/portfolio_title"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/spotifyApp"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:text="@string/portfolio_spotify" />

        <Button
            android:id="@+id/scoresApp"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spotifyApp"
            android:text="@string/portfolio_scores" />

        <Button
            android:id="@+id/libraryApp"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scoresApp"
            android:text="@string/portfolio_library" />

        <Button
            android:id="@+id/builtItBiggerApp"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/libraryApp"
            android:text="@string/portfolio_build_it_bigger" />

        <Button
            android:id="@+id/xyzReaderApp"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/builtItBiggerApp"
            android:text="@string/portfolio_xyz_reader" />

        <Button
            android:id="@+id/capstoneApp"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/xyzReaderApp"
            android:text="@string/portfolio_capstone" />

    </RelativeLayout>
</ScrollView>